# SCOPE

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: akta_integration.md  akta_review_contract.md  akta_scope_demo.md  compatibility_matrix.md  ecosystem_demo.md  evidence_vocab_mapping.md  external_integration_contracts.md  field_thesis.md  identity_assurance.md  institutional_guide.md  institutional_pilot_guide.md  key_management.md  limitations.md  pcs_export.md  pf_core_bridge.md  production_deployment.md  quality_metrics.md  rbac_scope_authority.md  review_doctrine.md  reviewer_guide.md  scoped_scientific_authorization.md  signing_assurance.md  threat_model.md  trusted_boundary.md
evals/: metrics.py  quality_reports.py  run_review_cases.py
examples/: decision_ds.json
policy/: approval_scopes.yaml  blocked_tool_severity.yaml  decision_options.yaml  expiration_rules.yaml  identity_mapping.yaml  minimum_signing_assurance.yaml  org_rbac.yaml  quality_metrics.yaml  reviewer_assignments.yaml  reviewer_key_registry.yaml  reviewer_roles.yaml  role_to_action_matrix.yaml  scim_snapshot.yaml  scope_to_tool_matrix.yaml  workflow_escalation.yaml
schemas/: akta_record_import.schema.json  akta_review_trigger_import.schema.json  approval_scope.schema.json  domain_overlay.schema.json  expiration_rule.schema.json  identity_assurance.schema.json  ledger_event.schema.json  pcs_scope_artifact.schema.json  pf_scope_obligation.schema.json  quality_report.schema.json  review_assignment.schema.json  reviewer_role.schema.json  scope_akta_review_session_summary.schema.json  scope_akta_review_summary.schema.json  scope_decision.schema.json  scope_grant.schema.json  scope_packet.schema.json  scope_quorum_policy.schema.json  scope_review_queue.schema.json  scope_review_session.schema.json  scope_reviewer_vote.schema.json
scope/: __init__.py  _version.py  akta_review.py  authority.py  cli.py  config.py  decisions.py  engine_factory.py  errors.py  (+35 more)
(+240 files in other folders)
