[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scope-protocol"
version = "0.2.0"
description = "Scoped Scientific Authorization Protocol for AI-shaped science"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "SCOPE Contributors" }]
keywords = ["scope", "authorization", "scientific-review", "akta"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "jsonschema>=4.21",
    "PyYAML>=6.0",
    "click>=8.1",
    "cryptography>=42.0",
]


[project.urls]
Homepage = "https://github.com/fraware/SCOPE"
Repository = "https://github.com/fraware/SCOPE"
Documentation = "https://github.com/fraware/SCOPE/tree/main/docs"
Issues = "https://github.com/fraware/SCOPE/issues"
[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "setuptools>=68.0",
]
rest = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[project.scripts]
scope = "scope.cli:main"

[tool.setuptools]
packages = ["scope"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"evals/run_review_cases.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
check_untyped_defs = true
exclude = ["build/", "dist/"]